Updates post test - creates Vagrant box.

--- a/templates/config.yml.j2
+++ b/templates/config.yml.j2
@@ -6,17 +6,14 @@ configs:
     vagrant_box: '{{ vagrant_box }}'
 
     hosts: [
-{% for host in host_list %}
+{% for host in vagrant_vm_list %}
       "{{ host.hostname }}"
 {% endfor %}
       ]
 
-{% for host in host_list %}
+{% for host in vagrant_vm_list %}
     {{ host.hostname }}:
       hostname: '{{ host.hostname }}'
-      vm_name: '{{ host.vm_name }}'
-      public_ip: '{{ host.public_ip }}'
-      vm_memory: '{{ host.memory }}'
 
 {% endfor %}
 ...
